fix/DEV-header-alignment

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -14,4 +14,5 @@ html {
 
 .container {
     max-width: 1920px;
+    margin: 0 auto;
 }
